IngressK8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vizibil-website-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: $uri
spec:
  rules:
    - host: services.vizibil.digital  # Replace with your subdomain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vizibil-api
                port:
                  number: 8080
